--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "edge.js": "^6.2.1",
     "luxon": "^3.5.0",
     "pg": "^8.14.1",
+    "preline": "^3.0.1",
     "reflect-metadata": "^0.2.2",
     "tailwindcss": "^4.0.14"
   },
